// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeSelector should change the input 1`] = `
<div>
  <div
    class="time-selector-root"
  >
    <svg
      class="icon-root lexicon-icon lexicon-icon-time"
      viewBox=""
    >
      <use
        xlink:href="#time"
      />
    </svg>
    <input
      class="input-root form-control"
      type="time"
      value="test"
    />
    <div
      class="time-zone"
    >
      (GMT +00:00)
    </div>
  </div>
</div>
`;

exports[`TimeSelector should render 1`] = `
<div>
  <div
    class="time-selector-root"
  >
    <svg
      class="icon-root lexicon-icon lexicon-icon-time"
      viewBox=""
    >
      <use
        xlink:href="#time"
      />
    </svg>
    <input
      class="input-root form-control"
      type="time"
      value=""
    />
    <div
      class="time-zone"
    >
      (GMT +00:00)
    </div>
  </div>
</div>
`;
